# TMR4243_CSEI

./: .gitignore  README.md  devcontainer.dockerfile  install.sh  requirements.txt
.devcontainer/: devcontainer.dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
common_tools/: package.xml  setup.py
common_tools/scripts/: bag_to_csv.py
common_tools/src/common_tools/: lib.py  math_tools.py
cse_gain_server/cfg/: gains.cfg
cse_gain_server/nodes/: server.py
cse_messages/: package.xml
cse_messages/msg/: observer_message.msg  reference_message.msg  s_message.msg
cse_simulator/launch/: simulation.launch
cse_simulator/src/: CSEI.py  CSS.py
cse_teleop/: package.xml
cse_teleop/launch/: teleop.launch
cse_teleop/src/: teleop.py
docs/: terminal.gif:Zone.Identifier
misc/provisioner/: desktop.yml  requirements.yml
notebooks/: 00_ROS_basics.ipynb  00_introduction.ipynb  00_quick_start.ipynb  00_run_joystick.ipynb  00_run_simulator.ipynb  01_ROS_programming_with_python.ipynb  01_case_study_a.ipynb  01_case_study_b.ipynb  01_case_study_c.ipynb  02_CSE_simulation.ipynb  02_during_lab.ipynb  10_thrust_allocation.ipynb  vm_installation_guide.ipynb
notebooks/case_studies/: case_study_a.ipynb  case_study_c.ipynb
notebooks/nonlinear_systems/: forward_completeness.ipynb  lipschitz_property.ipynb  lyapunov_proof.ipynb  uniqueness.ipynb
notebooks/ros_tutorials/: 01_simple_ros2_project_from_scratch.ipynb  02_ros2_joystick_tutorial.ipynb  03_visualization.ipynb  ros2_introduction.ipynb  ros2_joystick_tutorial.ipynb
ros2_bag_to_csv/: CMakeLists.txt  package.xml
ros2_bag_to_csv/launch/: ros2_bag_to_csv.launch.py
ros2_bag_to_csv/ros2_bag_to_csv/: ros2_bag_to_csv_node.py
template_controller/: CMakeLists.txt  package.xml
template_controller/config/: param.yaml
template_controller/launch/: controller.launch.py
template_controller/src/: template_controller.py
template_controller/template_controller/: PD_FF_controller.py  PID_controller.py  backstepping_controller.py  controller_node.py
template_guidance/: CMakeLists.txt  package.xml
template_guidance/config/: param.yaml
template_guidance/launch/: guidance.launch.py
template_guidance/src/: guidance.py
template_guidance/template_guidance/: backstepping.py  guidance_node.py  path.py  stationkeeping.py  straight_line.py
template_joystick_control/: CMakeLists.txt  package.xml
template_joystick_control/config/: template.param.yaml
template_joystick_control/launch/: joystick.launch.py
template_joystick_control/template_joystick_control/: joystick_control_node.py  joystick_force_basin_relative.py  joystick_force_body_relative.py  joystick_mapping.py  joystick_simple.py
template_joystick_force/: CMakeLists.txt  package.xml
template_joystick_force/src/: thrust_allocation.py
template_joystick_force/template_joystick_force/: joystick_force_body_relative.py  joystick_simple.py  joystick_teleop_node.py
template_observer/: CMakeLists.txt  package.xml
template_observer/config/: param.yaml
template_observer/launch/: observer.launch  observer.launch.py
template_observer/param/: config.yaml
template_observer/src/: observer.py
template_observer/template_observer/: luenberg.py  luenberger.py  observer_node.py  wrap.py
template_thrust_allocation/: CMakeLists.txt  README.md  package.xml
template_thrust_allocation/launch/: thrust_allocation.launch.py
template_thrust_allocation/src/: thrust_allocation.py
template_thrust_allocation/template_thrust_allocation/: thrust_allocation_matrix.py  thrust_allocation_node.py  thruster_allocation.py  thruster_configuration_matrix.py
tmp_common_tools/: CMakeLists.txt  setup.py
tmp_common_tools/src/common_tools/: math_tools.py
tmp_cse_gain_server/: CMakeLists.txt  package.xml
tmp_cse_gain_server/nodes/: server.py
tmp_cse_messages/: CMakeLists.txt
tmp_cse_messages/msg/: reference_message.msg  s_message.msg
tmp_cse_simulator/: CMakeLists.txt  package.xml
tmp_cse_simulator/src/: params.yaml
tmp_cse_teleop/: CMakeLists.txt
tmp_cse_teleop/src/: teleop.py
tmp_example_dummy/: CMakeLists.txt  package.xml
tmp_example_dummy/src/: example_node.py
tmp_notebooks/: 03_HIL_setup.ipynb
tmp_template_controller/: CMakeLists.txt
tmp_template_guidance/: CMakeLists.txt  package.xml
tmp_template_guidance/src/: guidance.py
tmp_template_joystick_force/: CMakeLists.txt  package.xml
tmp_template_joystick_force/src/: thrust_allocation.py
tmp_template_observer/param/: observer_config.yaml
tmp_template_thrust_allocation/: CMakeLists.txt  README.md  package.xml
tmp_template_thrust_allocation/src/: thrust_allocation.py
tmr4243_examples/: CMakeLists.txt  package.xml
tmr4243_examples/scripts/: publish_text.py  publish_u_cmd.py  subscribe_joy.py
tmr4243_interfaces/: CMakeLists.txt  package.xml
tmr4243_interfaces/msg/: Observer.msg  PathVariable.msg  Reference.msg
tmr4243_utilities/: CMakeLists.txt  package.xml
tmr4243_utilities/launch/: utilities.launch.xml  utilities.physical.launch.py  utilities.physical.xml  utilities.simulation.launch.py
tmr4243_utilities/tmr4243_utilities/: ros2bag_to_csv.py  utilities.py  utility_node.py
