<?xml version="1.0"?>
<package format="2">
  <name>cse_teleop</name>
  <version>0.0.0</version>
  <description>The cse_teleop package</description>

  <maintainer email="emir.cem.gezer@ntnu.no">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>joy</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

</package>
