<?xml version="1.0"?>
<package format="2">
  <name>template_observer</name>
  <version>0.0.0</version>
  <description>The template_observer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="emir.cem.gezer@ntnu.no">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>cse_messages</depend>

</package>
