<?xml version="1.0"?>
<package format="2">
  <name>cse_gain_server</name>
  <version>0.0.0</version>
  <description>The cse_gain_server package</description>

  <maintainer email="emir.cem.gezer@ntnu.no">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
