<?xml version="1.0"?>
<package format="2">
  <name>cse_simulator</name>
  <version>0.0.0</version>
  <description>The cse_simulator package</description>

  <maintainer email="emir.cem.gezer@ntnu.no">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


</package>
