<?xml version="1.0"?>
<package format="2">
  <name>template_thrust_allocation</name>
  <version>0.0.0</version>
  <description>The template_thrust_allocation package</description>

  <maintainer email="emir.cem.gezer@ntnu.no">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <depend>cse_messages</depend>


</package>
